Домашняя работа 3 - правки после CR2